2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Rebuild if the framework has changed.

2008-04-08  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodCallWithSubsetLinkDemandRule.cs: Call Resolve before
	reading the PermissionSet.
	* SecureGetObjectDataOverridesRule.cs: Call Resolve before 
	reading the PermissionSet. Fix bug #375368
	* TypeIsNotSubsetOfMethodSecurityRule.cs: Call Resolve before
	reading the PermissionSet.
	* TypeLinkDemandRule.cs: Call Resolve before reading the 
	PermissionSet.
	* Makefile.am: Add reference to Test.Rules assembly.

2008-04-08  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* SecureGetObjectDataOverridesRule.cs: Fixed a typo.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* ArrayFieldsShouldNotBeReadOnlyRule.cs
	* MethodCallWithSubsetLinkDemandRule.cs
	* NativeFieldsShouldNotBeVisibleRule.cs
	* NonVirtualMethodWithInheritanceDemandRule.cs
	* SealedTypeWithInheritanceDemandRule.cs
	* SecureGetObjectDataOverridesRule.cs
	* StaticConstructorsShouldBePrivateRule.cs
	* TypeExposeFieldsRule.cs
	* TypeIsNotSubsetOfMethodSecurityRule.cs
	* TypeLinkDemandRule.cs:
		Update rules wrt framework changes.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* ArrayFieldsShouldNotBeReadOnlyRule.cs: New. Rule that warns 
	about read-only array fields, since the value inside the array are 
	not read-only [Andreas Noever]
	* NativeFieldsShouldNotBeVisibleRule.cs: New. Rule that warns
	about native, non read-only, fields since they can be directly 
	modified [Andreas Noever].
	* Gendarme.Rules.Security.xml.in: Add new rules description.
	* Makefile.am: Add rules/tests to the build.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* StaticConstructorsShouldBePrivateRule.cs: New. Rule that checks 
	for non-private static constructor in classes [Daniel Abramov]
	* Gendarme.Rules.Security.mdp: Add new rule in MD project.
	* Gendarme.Rules.Security.xml.in: Add new rule description.